--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <label for="message">Mensagem:</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <input type="hidden" name="redirectTo" value="https://example.com/contact/success">
+                    <input type="hidden" name="redirectTo" value="https://marcojunior.netlify.app/obrigado">
                     <button class="bbutton" type="submit">Enviar</button> 
                 
                 </form>
@@ -160,10 +160,6 @@
         <div class="todosd"><h4>TODOS OS DIREITOS RESERVADOS</h4></div>
     </footer>
     <script src="/scripts/scripts.js"></script>
-    <script>
-        document.getElementById('contactForm').addEventListener('submit', function() {
-            alert('Obrigado por entrar em contato! Nós responderemos em breve.');
-        });
-    </script>
+    
 </body>
 </html>
