--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo"><img src="svg/Group 3.svg" alt=""></div>
+            <div class="logo"><a href="index.html"><img src="svg/Group 3.svg" alt=""></a></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#SERVIÇOS">SERVIÇOS</a></li>
                 <li><a href="#PORTIFOLIO">PORTIFOLIO</a></li>
@@ -82,17 +82,7 @@
                         <img src="img/Latic1.png" alt="Slide 3">
                     </div>
                 </div>
-                <!-- <div class="slidesphone">
-                    <div class="slide">
-                        <img src="img/alertapromocel.png" alt="Slide 1">
-                    </div>
-                    <div class="slide">
-                        <img src="img/cumarucel.png" alt="Slide 2">
-                    </div>
-                    <div class="slide">
-                        <img src="img/laticcel.png" alt="Slide 3">
-                    </div>
-                </div>-->
+               
                 <div class="navigation">
                     <a href="#PORTIFOLIO" id="prev">&#10094;</a>
                     <a href="#PORTIFOLIO" id="next">&#10095;</a>
