--- a/obrigado.html
+++ b/obrigado.html
@@ -17,8 +17,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo"><img src="svg/Group 3.svg" alt=""></div>
+            <div class="logo"><a href="index.html"><img src="svg/Group 3.svg" alt=""></a></div>
             <ul class="nav-links" id="navLinks">
+                <li><a href="index.html">INÍCIO</a></li>
                 <li><a href="index.html#SERVIÇOS">SERVIÇOS</a></li>
                 <li><a href="index.html#PORTIFOLIO">PORTIFOLIO</a></li>
                 <li><a href="index.html#SOBRE">SOBRE</a></li>
